module2/canary_deployment/deployment_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visualizer-ingress
  namespace: module2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "90"
spec:
  ingressClassName: nginx
  rules:
    - host: module2.visualizer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visualizer-service
                port:
                  number: 8093

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visualizer-ingress-canary
  namespace: module2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: module2.visualizer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visualizer-service-canary
                port:
                  number: 8093
